Corrected sorting algorithm and created more exhaustive test cases.

--- a/Assignment1/Makefile
+++ b/Assignment1/Makefile
@@ -11,6 +11,10 @@ test3 : SJF test3.txt
 	./SJF < test3.txt
 test4 : SJF test4.txt
 	./SJF < test4.txt
+test5 : SJF test5.txt
+	./SJF < test5.txt
+test6 : SJF test6.txt
+	./SJF < test6.txt
 test1VAL : SJF test1.txt
 	valgrind ./SJF < test1.txt
 test2VAL : SJF test2.txt
@@ -19,3 +23,7 @@ test3VAL : SJF test3.txt
 	valgrind ./SJF < test3.txt
 test4VAL : SJF test4.txt
 	valgrind ./SJF < test4.txt
+test5VAL : SJF test5.txt
+	valgrind ./SJF < test5.txt
+test6VAL : SJF test6.txt
+	valgrind ./SJF < test6.txt
