2018-09-16 Added test8.txt into Makefile.

--- a/Assignment1/Makefile
+++ b/Assignment1/Makefile
@@ -17,6 +17,8 @@ test6 : SJF test6.txt
 	./SJF < test6.txt
 test7 : SJF test7.txt
 	./SJF < test7.txt
+test8 : SJF test8.txt
+	./SJF < test8.txt
 test1VAL : SJF test1.txt
 	valgrind ./SJF < test1.txt
 test2VAL : SJF test2.txt
@@ -29,5 +31,7 @@ test5VAL : SJF test5.txt
 	valgrind ./SJF < test5.txt
 test6VAL : SJF test6.txt
 	valgrind ./SJF < test6.txt
-test7VAL : SJF test67txt
+test7VAL : SJF test7txt
 	valgrind ./SJF < test7.txt
+test8VAL : SJF test8txt
+	valgrind ./SJF < test8.txt
