--- a/Labs/Lab2/Makefile
+++ b/Labs/Lab2/Makefile
@@ -1,5 +1,8 @@
 CC = gcc
-CFLAGS = -g -Wall -Wshadow -lpthread
+CFLAGS = -g -Wall -lpthread
 
 encode : encode.c
 	$(CC) encode.c -o encode $(CFLAGS)
+
+a : a.c
+	$(CC) a.c -o a $(CFLAGS)
