2018-10-02 CS3413 Lab 2 pipes.

--- a/Labs/Lab2/Makefile
+++ b/Labs/Lab2/Makefile
@@ -1,8 +1,11 @@
 CC = gcc
-CFLAGS = -g -Wall -lpthread
+CFLAGS = -g -Wall -Werror -lpthread
 
 encode : encode.c
 	$(CC) encode.c -o encode $(CFLAGS)
-
-a : a.c
-	$(CC) a.c -o a $(CFLAGS)
+test1 : encode test1.txt
+	./encode < test1.txt
+test2 : encode test2.txt
+	./encode < test2.txt
+test3 : encode test3.txt
+	./encode < test3.txt
