--- a/Assignment4/Makefile
+++ b/Assignment4/Makefile
@@ -1,15 +1,11 @@
 CC = gcc
 CFLAGS = -g -Wall -Wshadow -lpthread
 
-pthread_SJF : pthread_SJF.c
-	$(CC) pthread_SJF.c -o pthread_SJF $(CFLAGS)
+sleepingTA : sleepingTA.c
+	$(CC) sleepingTA.c -o sleepingTA $(CFLAGS)
 
-test1 : pthread_SJF test1.txt
-	./pthread_SJF 1 < test1.txt
+test1 : sleepingTA
+	./sleepingTA -c 5 -t 200 -n 12 
 
-test2 : pthread_SJF test2.txt
-	./pthread_SJF 2 < test2.txt
-
-test3 : pthread_SJF test3.txt
-	./pthread_SJF 3 < test3.txt
-
+clean : 
+	rm sleepingTA
