2018-10-9 Added intro comments and early exit conditions.

--- a/Assignment4/Makefile
+++ b/Assignment4/Makefile
@@ -6,6 +6,12 @@ sleepingTA : sleepingTA.c
 
 test1 : sleepingTA
 	./sleepingTA -c 5 -t 200 -n 12 
+	
+test2 : sleepingTA
+	./sleepingTA -c 10 -t 500 -n 15 
+	
+test3 : sleepingTA
+	./sleepingTA -c 8 -t 0 -n 12 
 
 clean : 
 	rm sleepingTA
