2018-11-16 to figure out indexing

--- a/Assignment8/Makefile
+++ b/Assignment8/Makefile
@@ -10,6 +10,9 @@ test1 : memSwap test1.txt
 test2 : memSwap test1.txt
 	./memSwap 10 -l < test1.txt
 
+test3 : memSwap test1.txt
+	./memSwap i -l < test1.txt
+
 test1v : memSwap test1.txt
 	valgrind ./memSwap 10 -f < test1.txt --leak-check=full
 
