2018-11-23 created memDisk.c. it does i/o and can enqueue requests

--- a/Assignment9/Makefile
+++ b/Assignment9/Makefile
@@ -2,4 +2,10 @@
 (CFLAGS) = -g -Wall -Wshadow -lm
 
 memDisk : memDisk.c
-	(CC) memDisk.c -o memDisk (CFLAGS)
+	$(CC) memDisk.c -o memDisk $(CFLAGS)
+
+test1 : memDisk test1.txt
+	./memDisk T 53 < test1.txt
+
+clean : 
+	rm memDisk
