2018-11-26 cscan test 4 991 vs 999 are out of order

--- a/Assignment9/Makefile
+++ b/Assignment9/Makefile
@@ -5,10 +5,16 @@ memDisk : memDisk.c
 	$(CC) memDisk.c -o memDisk $(CFLAGS)
 
 test1 : memDisk test1.txt
-	./memDisk T 53 < test1.txt
+	./memDisk F 53 < test1.txt
 
 test2 : memDisk test2.txt
 	./memDisk T 53 < test2.txt
+
+test3 : memDisk test3.txt
+	./memDisk T 53 < test3.txt
+
+test4 : memDisk test3.txt
+	./memDisk C 999 < test3.txt
 
 clean : 
 	rm memDisk
